# update_channel

./: Cargo.toml  LICENSE  Readme.md
src/: lib.rs  receiver.rs  updater.rs
