[package]
name = "update_channel"
version = "0.1.1"
authors = ["hassan <hassanabujabir@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/DrSloth/heartfelt"
description = "A channel for single updatable values."
keywords = ["channel", "concurrent"]
include = ["Readme.md", "LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
